--- a/frontend/src/app/dashboard/page/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/page/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="page overflow-hidden">
   <div class="d-flex flex-column w-100">
-    <ul class="nav overflow-scroll flex-nowrap py-2">
+    <ul class="nav overflow-x-scroll flex-nowrap py-2">
       <li class="nav-item">
         <a class="nav-link text-secondary d-flex gap-1 align-items-center" routerLinkActive="active-admin-link"
           routerLink="/admin" [routerLinkActiveOptions]="{ exact: true }">Inicio <i class="fa-solid fa-house"></i></a>
