--- a/frontend/src/app/dashboard/components/product-dashboard/product-dashboard.component.html
+++ b/frontend/src/app/dashboard/components/product-dashboard/product-dashboard.component.html
@@ -1,8 +1,7 @@
-<div class="overflow-scroll mt-5">
+<div class="overflow-x-scroll mt-5">
   <div class="d-flex gap-4 mb-3 text-md justify-content-between">
     <h2 class="text-xl">Productos</h2>
-    <button type="button" class="fab btn btn-primary" title="Agregar producto" data-bs-toggle="modal"
-      data-bs-target="#modalProducto">
+    <button type="button" class="fab btn btn-primary" title="Agregar producto" (click)="openModal(modalContent)">
       <i class="fa-solid fa-plus text-md"></i>
     </button>
   </div>
@@ -15,7 +14,7 @@
         <th></th>
         <th>Id</th>
         <th>Nombre</th>
-        <th class="d-inline-block" style="width: 300px;">Descripción</th>
+        <th class="d-inline-block" style="min-width: 200px;">Descripción</th>
         <th>Precio</th>
         <th>Stock</th>
         <th>Categoría</th>
@@ -24,7 +23,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let product of products">
+      <tr *ngFor="let product of productList">
         <td>
           <img class="product__image" [src]="product.image" [alt]="product.name">
         </td>
@@ -45,87 +44,83 @@
       </tr>
     </tbody>
   </table>
+</div>
 
+<div class="d-flex justify-content-center my-5">
+  <ngb-pagination class="d-flex align-items-lg-start" [collectionSize]="collectionSize" [(page)]="page"
+    [pageSize]="pageSize" (pageChange)="refreshProductList()" size="lg" [maxSize]="3" [rotate]="true" [ellipses]="false"
+    [boundaryLinks]="true">
+  </ngb-pagination>
+</div>
 
-  <!-- modal -->
-  <div class="modal fade" id="modalProducto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-      <div class="modal-content">
-        <div class="modal-header p-4">
-          <h1 class="modal-title  text-md-center " id="exampleModalLabel">Agregar Productos</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form [formGroup]="formProduct" (ngSubmit)="addNewProduct()" (ngReset)="resetFormProduct()"
-            enctype="multipart/form-data">
+<!-- modal -->
+<ng-template #modalContent>
+  <div class="modal-header p-4">
+    <h1 class="modal-title  text-md-center ">Agregar Productos</h1>
+    <button type="button" class="btn-close" aria-label="Close" (click)="closeModal()"></button>
+  </div>
+  <div class="modal-body">
+    <form [formGroup]="formProduct" (ngSubmit)="addNewProduct()" enctype="multipart/form-data">
 
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Nombre de producto</label>
-              <input type="text" formControlName="name" name="name" class="form-control text-md" id="product-name"
-                placeholder="Ingrese el nombre del producto">
-              <div class="fs-5 text-danger mt-2"
-                [hidden]="formProductState.name.valid || formProductState.name.pristine">
-                <span *ngIf="formProductState.name.errors?.['required']">El nombre es obligatorio</span>
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Descripción</label>
-              <input type="text" formControlName="description" name="description" class="form-control text-md"
-                id="product-descripcion" placeholder="Ingrese la descripción del producto">
-              <div class="fs-5 text-danger mt-2"
-                [hidden]="formProductState.description.valid || formProductState.description.pristine">
-                <span *ngIf="formProductState.description.errors?.['required']">La descripción es obligatoria</span>
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Imagen</label>
-              <input type="file" formControlName="image" name="image" class="form-control text-md"
-                id="product-descripcion" placeholder="Ingrese la image del producto" (change)="onFileChange($event)">
-              <div class="fs-5 text-danger mt-2"
-                [hidden]="formProductState.image.valid || formProductState.image.pristine">
-                <span *ngIf="formProductState.image.errors?.['required']">La imagen obligatoria</span>
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Precio</label>
-              <input type="number" formControlName="price" name="price" class="form-control text-md" id="product-precio"
-                placeholder="Ingrese el precio del producto">
-              <div class="fs-5 text-danger mt-2"
-                [hidden]="formProductState.price.valid || formProductState.price.pristine">
-                <span *ngIf="formProductState.price.errors?.['required']">El precio es obligatorio</span>
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Stock</label>
-              <input type="number" formControlName="stock" name="stock" class="form-control text-md" id="product-stock"
-                placeholder="Ingrese la cantidad disponible del producto">
-              <div class="fs-5 text-danger mt-2"
-                [hidden]="formProductState.stock.valid || formProductState.stock.pristine">
-                <span *ngIf="formProductState.stock.errors?.['required']">El stock es obligatorio</span>
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Categoria</label>
-              <select formControlName="category_product" name="category_product" class="form-select text-md"
-                aria-label="Default select example">
-                <option selected value="">--- Seleccione una categoria ---</option>
-                <option value="1">bebida fria</option>
-                <option value="2">bebida caliente</option>
-                <option value="3">postres</option>
-              </select>
-              <div class="fs-5 text-danger mt-2"
-                [hidden]="formProductState.category_product.valid || formProductState.category_product.pristine">
-                <span *ngIf="formProductState.category_product.errors?.['required']">La categoría es obligatoria</span>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button type="reset" class="btn btn-secondary text-md" data-bs-dismiss="modal">Cancelar</button>
-              <button type="submit" class="btn btn-primary text-md" id="submit"
-                [disabled]="formProduct.invalid || isLoading">Agregar Producto</button>
-            </div>
-          </form>
+      <div class="mb-3">
+        <label for="product-name" class="form-label">Nombre de producto</label>
+        <input type="text" formControlName="name" name="name" class="form-control text-md" id="product-name"
+          placeholder="Ingrese el nombre del producto">
+        <div class="fs-5 text-danger mt-2" [hidden]="formProductState.name.valid || formProductState.name.pristine">
+          <span *ngIf="formProductState.name.errors?.['required']">El nombre es obligatorio</span>
         </div>
       </div>
-    </div>
+      <div class="mb-3">
+        <label for="product-description" class="form-label">Descripción</label>
+        <input type="text" formControlName="description" name="description" class="form-control text-md"
+          id="product-description" placeholder="Ingrese la descripción del producto">
+        <div class="fs-5 text-danger mt-2"
+          [hidden]="formProductState.description.valid || formProductState.description.pristine">
+          <span *ngIf="formProductState.description.errors?.['required']">La descripción es obligatoria</span>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="product-image" class="form-label">Imagen</label>
+        <input type="file" formControlName="image" name="image" class="form-control text-md" id="product-image"
+          placeholder="Ingrese la image del producto" (change)="onFileChange($event)">
+        <div class="fs-5 text-danger mt-2" [hidden]="formProductState.image.valid || formProductState.image.pristine">
+          <span *ngIf="formProductState.image.errors?.['required']">La imagen obligatoria</span>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="product-price" class="form-label">Precio</label>
+        <input type="number" formControlName="price" name="price" class="form-control text-md" id="product-price"
+          placeholder="Ingrese el precio del producto">
+        <div class="fs-5 text-danger mt-2" [hidden]="formProductState.price.valid || formProductState.price.pristine">
+          <span *ngIf="formProductState.price.errors?.['required']">El precio es obligatorio</span>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="product-stock" class="form-label">Stock</label>
+        <input type="number" formControlName="stock" name="stock" class="form-control text-md" id="product-stock"
+          placeholder="Ingrese la cantidad disponible del producto">
+        <div class="fs-5 text-danger mt-2" [hidden]="formProductState.stock.valid || formProductState.stock.pristine">
+          <span *ngIf="formProductState.stock.errors?.['required']">El stock es obligatorio</span>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="product-category" class="form-label">Categoria</label>
+        <select formControlName="category_product" name="category_product" class="form-select text-md"
+          id="product-category">
+          <option selected value="">--- Seleccione una categoria ---</option>
+          <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
+        </select>
+        <div class="fs-5 text-danger mt-2"
+          [hidden]="formProductState.category_product.valid || formProductState.category_product.pristine">
+          <span *ngIf="formProductState.category_product.errors?.['required']">La categoría es
+            obligatoria</span>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="reset" class="btn btn-secondary text-md" (click)="closeModal()">Cancelar</button>
+        <button type="submit" class="btn btn-primary text-md" id="submit"
+          [disabled]="formProduct.invalid || isLoading || isSubmitting">Agregar Producto</button>
+      </div>
+    </form>
   </div>
-</div>
+</ng-template>
