detalles de estilos

--- a/frontend/src/app/dashboard/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/dashboard/components/user-dashboard/user-dashboard.component.html
@@ -107,7 +107,7 @@
           <button type="reset" class="btn btn-secondary text-md" (click)="closeModal()">Cancelar</button>
           <button type="submit" class="btn btn-primary text-md" id="submit"
             [disabled]="formUser.invalid || isLoading || isSubmitting">
-            <span *ngIf="!isSubmitting">Agregar Producto</span>
+            <span *ngIf="!isSubmitting">Agregar Usuario</span>
             <span *ngIf="isSubmitting" class="spinner-border" role="status" aria-hidden="true"></span>
             <span *ngIf="isSubmitting">
               Cargando...
