add responsive productos-detail

--- a/frontend/src/app/products/pages/product-details/product-details.component.html
+++ b/frontend/src/app/products/pages/product-details/product-details.component.html
@@ -1,7 +1,11 @@
 <app-header></app-header>
 <div class="page">
   <div *ngIf="product">
+    <div class="row w-100"> 
+  <div class="col-md-4">
     <img [src]="product.img" alt="">
+  </div>
+  <div class="col-md-7">
     <h2>nombre: {{ product.name }}</h2>
     <p>descripcion: {{ product.description }}</p>
     <p *ngIf="product.discount" class="text-decoration-line-through">antes: {{ product.price|currency }}</p>
@@ -10,8 +14,11 @@
     <p *ngIf="product.discount">descuento: {{ product.discount }}%</p>
     <p>categoria: {{product.category}}</p>
   </div>
+  </div>
+
   <div *ngIf="productNotFound">
     <h2>{{productNotFound}}</h2>
   </div>
+</div>
 </div>
 <app-footer></app-footer>
